# devdocs-pro

./: .env.example  .gitignore  ALL_TESTS_FIXED_SUMMARY.md  CI_FIXES_SUMMARY.md  CI_WORKFLOW_FINAL_STATUS.md  CLIPPY_FIXES_SUMMARY.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  Dockerfile  ENVIRONMENT.md  FINAL_TEST_STATUS.md  IMPLEMENTATION_COMPLETE.md  PRODUCTION_READY_SUMMARY.md  README.md  SECURITY.md  SECURITY_IMPLEMENTATION_COMPLETE.md  SECURITY_SYSTEM_FINAL_STATUS.md  SECURITY_WORKFLOW_GUIDE.md  TEST_RESULTS_SUMMARY.md  WORKFLOW_ASSESSMENT.md  cargo-watch.toml  ci_test.sh  demo_documentation.html  demo_documentation.md  demo_openapi.json  deny.toml  deploy.sh  docker-compose.yml  quick_deploy_test.sh  security_config.yaml  test_day4.sh  test_deployment.sh  workflow_documentation.html  workflow_openapi.json
.cargo/: config.toml
.github/workflows/: README.md  ci.yml  security-ci.yml  validate-workflows.yml
crates/devdocs-bindings/: Cargo.toml
crates/devdocs-bindings/src/: common.rs  golang.rs  lib.rs  nodejs.rs  python.rs
crates/devdocs-cli/: Cargo.toml
crates/devdocs-cli/src/: main.rs
crates/devdocs-core/: Cargo.toml
crates/devdocs-core/assets/: documentation.css  documentation.js
crates/devdocs-core/src/: body_capture.rs  config.rs  errors.rs  lib.rs  models.rs  utils.rs
crates/devdocs-core/src/ai/: batch_processor.rs  gemini_client.rs  mod.rs  prompts.rs
crates/devdocs-core/src/analysis/: ai_processor.rs  endpoint.rs  endpoint_detector.rs  mod.rs  patterns.rs  schema_inference.rs  stats.rs  traffic_analyzer.rs
crates/devdocs-core/src/documentation/: html_generator.rs  markdown_generator.rs  mod.rs  openapi_generator.rs  realtime_updater.rs
crates/devdocs-core/src/models/: hash.rs  mod.rs  request.rs  response.rs  schema_types.rs
crates/devdocs-core/src/schema/: inference.rs  mod.rs  validation.rs
crates/devdocs-core/src/security/: audit.rs  auth.rs  compliance.rs  config.rs  data_protection.rs  encryption.rs  mod.rs  monitoring.rs  pii_detection.rs  rate_limiting.rs  secrets.rs
crates/devdocs-core/src/storage/: database.rs  disk.rs  encryption.rs  memory.rs  mod.rs
crates/devdocs-middleware/: Cargo.toml
crates/devdocs-middleware/src/: ai_processor.rs  correlation.rs  interceptor.rs  lib.rs  processor.rs
crates/devdocs-middleware/src/interceptor/: mod.rs  tower.rs
crates/devdocs-middleware/src/sampling/: mod.rs
crates/devdocs-middleware/src/security/: mod.rs
crates/devdocs-middleware/tests/: integration_tests.rs
docs/: architecture.md
examples/: Cargo.toml  ai_test.rs  basic_usage.rs  complete_example.rs  security_example.rs  security_status_check.rs  simple_security_test.rs  working_security_test.rs
examples/audit_logs/: audit_2025-08-11.jsonl  audit_2025-08-12.jsonl
examples/secrets/: aaf59a1b-5f04-4685-8d58-990baac560c4.secret  cce50d49-8b21-4c1b-8792-9e654df94cdc.secret  e5025106-7526-4af8-9265-ba4c7b6121d2.secret  f4433d2d-1c0a-4d22-b48b-c987470bbe12.secret
scripts/: dev.sh  validate_workflows.sh
tests/: ai_integration_test.rs
