[workspace]
resolver = "2"
members = [
    "crates/devdocs-core",
    "crates/devdocs-middleware", 
    "crates/devdocs-bindings",
    "crates/devdocs-cli",
    "examples"
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-layer = "0.3"
tower-service = "0.3"
hyper = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
