[workspace]
resolver = "2"
members = [
    "crates/devdocs-core",
    "crates/devdocs-middleware", 
    "crates/devdocs-bindings",
    "crates/devdocs-cli",
    "examples"
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.4"
tower-layer = "0.3"
tower-service = "0.3"
hyper = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# Security and Compliance Dependencies
ring = "0.17"
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"
hmac = "0.12"
jwt = "0.16"
x509-parser = "0.16"
rustls = "0.23"
rustls-pemfile = "2.0"

# Data Protection and Privacy
regex = "1.10"
fancy-regex = "0.13"

# Audit and Monitoring
prometheus = "0.13"
opentelemetry = "0.24"
opentelemetry-prometheus = "0.17"
tracing-opentelemetry = "0.25"

# Database and Storage Security
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"] }

# Rate Limiting and DDoS Protection
governor = "0.6"
tower-governor = "0.4"

# Configuration and Secrets Management
config = "0.14"
secrecy = "0.8"
zeroize = "1.8"

# Additional dependencies
async-trait = "0.1"
hex = "0.4"
serde_yaml = "0.9"
