[package]
name = "basic_usage"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "basic_usage"
path = "basic_usage.rs"

[dependencies]
devdocs-middleware = { path = "../crates/devdocs-middleware" }
devdocs-core = { path = "../crates/devdocs-core" }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { version = "0.1", features = ["tokio", "server"] }
http-body-util = "0.1"
tower = { workspace = true, features = ["util"] }
tracing-subscriber = { workspace = true }
