[package]
name = "basic_usage"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "basic_usage"
path = "basic_usage.rs"

[[bin]]
name = "ai_test"
path = "ai_test.rs"

[dependencies]
devdocs-middleware = { path = "../crates/devdocs-middleware" }
devdocs-core = { path = "../crates/devdocs-core" }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { version = "0.1", features = ["tokio", "server"] }
http-body-util = "0.1"
tower = { workspace = true, features = ["util"] }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
