[package]
name = "basic_usage"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "basic_usage"
path = "basic_usage.rs"

[[bin]]
name = "ai_test"
path = "ai_test.rs"

[[bin]]
name = "security_example"
path = "security_example.rs"

[[bin]]
name = "security_status_check"
path = "security_status_check.rs"

[[bin]]
name = "complete_example"
path = "complete_example.rs"

[dependencies]
devdocs-middleware = { path = "../crates/devdocs-middleware" }
devdocs-core = { path = "../crates/devdocs-core" }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { version = "0.1", features = ["tokio", "server"] }
http-body-util = "0.1"
tower = { workspace = true, features = ["util"] }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
