[package]
name = "devdocs-bindings"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Language-specific bindings for DevDocs Pro"

[dependencies]
# Internal dependencies
devdocs-core = { path = "../devdocs-core" }
devdocs-middleware = { path = "../devdocs-middleware" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling and logging
thiserror = { workspace = true }
tracing = { workspace = true }

# Common utilities
uuid = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
mockall = { workspace = true }

[features]
default = []
python = []
nodejs = []
golang = []
