[package]
name = "devdocs-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
chrono = { workspace = true }
bytes = "1.0"
regex = "1.0"
rand = "0.8"
urlencoding = "2.1"
reqwest = { workspace = true }
