[package]
name = "devdocs-core"
version = "0.1.0"
edition = "2021"
description = "Core data structures and utilities for DevDocs Pro"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"
mime = "0.3"
mime_guess = "2.0"
thiserror = "2.0.12"
tokio = { version = "1.40", features = ["full"] }
memmap2 = "0.9"
flate2 = "1.0"
brotli = "8.0.1"
bytes = "1.0"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tracing = "0.1"
regex = "1.0"
rand = "0.9.2"
urlencoding = "2.1"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
