[package]
name = "devdocs-middleware"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP middleware for capturing API traffic in DevDocs Pro"

[dependencies]
# Internal dependencies
devdocs-core = { path = "../devdocs-core" }

# HTTP processing
hyper = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Error handling and logging
thiserror = { workspace = true }
tracing = { workspace = true }

# Data structures
uuid = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
mockall = { workspace = true }
